umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_cdk_figueras-test-inring.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 27
sum_formula: C11H10O2
graph6: VsO_Woo_ODG?@?G?A??O??_?@??@???_??O??A???O??
