umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_cdk_iridiumCoordination.chebi52748.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 60
bond_count: 70
sum_formula: C47IrN6O6
graph6: "{hEGGC@_H?A??@??_?G?H??O??G??G?@C?_?A?C???????@???@????_??AG???P????C????G????G???OC???A?????O??????_????@?????@???C?C_?????_?????@??????C?????AG????C???????O??A????????????????????_??????@???C???A???????@????????G???_???A???G?????????????G??@??????????????C??????A?????????_???????????_????????C"
