umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_cdk_prediction-test.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 29
sum_formula: C22O5
graph6: ZkCgGO??g?_@?@?Go???CG????G??G??C??@???G???_??P???C???A????G
